--- a/Booking/static/index.css
+++ b/Booking/static/index.css
@@ -1,52 +1,30 @@
-/* TOP CONTAINER */
-.top-container {
-  background-image: url('landingimg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-/* button */
-.btn {
-  background: #fff;
-  background-image: -webkit-linear-gradient(top, #fff, #e3e6e8);
-  background-image: -moz-linear-gradient(top, #fff, #e3e6e8);
-  background-image: -ms-linear-gradient(top, #fff, #e3e6e8);
-  background-image: -o-linear-gradient(top, #fff, #e3e6e8);
-  background-image: linear-gradient(to bottom, #fff, #e3e6e8);
-  -webkit-border-radius: 12;
-  -moz-border-radius: 12;
-  border-radius: 12px;
-  text-shadow: 1px 1px 3px #666666;
-  font-family: Arial;
-  color: #225278;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-  margin-left: 20px;
-  margin-bottom: 180px;
-}
-
-.btn:hover {
-  background: #fff;
-  background-image: -webkit-linear-gradient(top, #fff, #e7ecf0);
-  background-image: -moz-linear-gradient(top, #fff, #e7ecf0);
-  background-image: -ms-linear-gradient(top, #fff, #e7ecf0);
-  background-image: -o-linear-gradient(top, #fff, #e7ecf0);
-  background-image: linear-gradient(to bottom, #fff, #e7ecf0);
-  text-decoration: none;
-}
-/* navbar */
 .navbar {
   margin: 0-18px 0 -18px;
   margin-right: 0;
   padding: 20px;
+  z-index: 1000;
+  justify-content: space-between;
+}
+
+.navbar-nav{
+  margin-right: 10+0px;
+
+}
+.nav-item{
+padding: 8px;
+margin-right: 80px;
 }
 .navbar-brand {
   font-family: "Ubuntu", sans-serif;
   font-size: 25px;
+  color: #fff;
+  margin-left: 10px;
 }
+
+
+
 .navbar-toggler-icon {
-  background-color: beige;
+  background-color: rgb(211, 211, 193);
 }
 .dropdown-menu {
   background-color: transparent;
@@ -54,107 +32,169 @@
 }
 .dropdown-item:hover {
   background-color: #192a2a;
+  color: #fff;
 }
 
 .navbar-collapse {
-  font-size: 18px;
+  font-size: 20px;
+  
 }
-#support {
-  color: #192a2a;
-  font-weight: 700;
+.support {
+  font-weight: 600;
   font-size: 20px;
 }
-@media (max-width: 1450px) {
-  #support {
-    color: rgb(248, 240, 230);
-  }
+
+
+ video
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+  z-index: -2;
 }
-/* headings */
-.main-heading {
-  font-family: "Merriweather", serif;
-  line-height: 1.5;
-  font-size: 35px;
-  margin-left: 20px;
-  padding-top: 80px;
-  padding-bottom: 30px;
+.overlay
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #01273a;
+  mix-blend-mode: overlay;
 }
-.sub-heading {
-  font-family: "Montserrat", sans-serif;
-  margin-left: 20px;
+
+.text
+{
+  position: relative;
+  z-index: 10;
+  padding: 150px 0 0 40px;
+}
+.text h2
+{
+  font-size: 2em;
+  width: 80%;
+  color: #fff;
+  line-height: 1.3em;
+  text-transform: uppercase;
   padding-bottom: 20px;
 }
-/* MIDDLE CONTAINER */
-
-.input {
-  margin: 15px;
-  padding: 5px 80px 5px 2px;
-  margin-left: 40px;
-  border-radius: 5px;
+.text h3
+{
+  font-size: 1em;
+  font-weight: 500;
+  color: #fff;
+  line-height: 1em;
+  text-transform: uppercase;
 }
-.get {
-  font-size: 50px;
-  margin-top: 60px;
-  margin-right: 30px;
-}
-#getintouch .container-fluid {
-  background-color: #dde0e8;
-  padding: 7% 15% 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-.btn-sub {
-  background: #192a2a;
-  background-image: -webkit-linear-gradient(top, #192a2a, #192a2a);
-  background-image: -moz-linear-gradient(top, #192a2a, #192a2a);
-  background-image: -ms-linear-gradient(top, #192a2a, #192a2a);
-  background-image: -o-linear-gradient(top, #192a2a, #192a2a);
-  background-image: linear-gradient(to bottom, #192a2a, #192a2a);
-  -webkit-border-radius: 14;
-  -moz-border-radius: 14;
-  border-radius: 14px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
+.text a
+{
+  display: inline-block;
+  font-size: 1em;
+  border-radius: 10px;
+  background: #fff;
+  padding: 10px 30px;
+  text-transform: uppercase;
   text-decoration: none;
-  margin-left: 90px;
-  margin-top: 20px;
+  font-weight: 500;
+  margin-top: 50px;
+  color: #111;
+  letter-spacing: 1px;
+  transition: 0.2s;
+  margin-right: 20px;
 }
-
-.btn-sub:hover {
-  background: #1b486b;
-  background-image: -webkit-linear-gradient(top, #1b486b, #1b486b);
-  background-image: -moz-linear-gradient(top, #1b486b, #1b486b);
-  background-image: -ms-linear-gradient(top, #1b486b, #1b486b);
-  background-image: -o-linear-gradient(top, #1b486b, #1b486b);
-  background-image: linear-gradient(to bottom, #1b486b, #1b486b);
-  text-decoration: none;
+.text a:hover
+{
+  letter-spacing: 6px;
 }
-
-/* BOTTOM CONTAINER */
-
-#socials .container-fluid {
-  background-color: #192a2a;
-  padding: 3% 15% 2%;
+.bottom{
+  position: relative;
+}
+.social
+{
+  position: relative;
+  bottom: 20px;
+  top: 150px;
+  left: -5px;
+  z-index: 10;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+  
+  
 }
+
+
 .footer-link {
   color: #fff;
   padding: 13px;
+  
+
 }
 .footer-link:hover {
   color: #666666;
 }
-p.copy {
-  color: #978e8e;
-  font-size: small;
-  padding-top: 10px;
-  padding-left: 25px;
+
+/* mobile size */
+@media (max-width : 992px){
+  .text
+{
+  padding: 70px 0 0 40px;
+}
+
+
+}
+@media (max-width : 710px){
+  
+.nav-item{
+  padding: 4px;
+  }
+  .dropdown-menu {
+    font-size: 14px;
+  }
+  .support {
+    font-size: 16px;
+  }
+  .navbar-collapse {
+    font-size: 16px;
+    }
+  .text h2
+{
+  font-size: 1.5em;
+  padding-bottom: 15px;
+}
+.text h3
+{
+  font-size: 0.8em;
+}
+  .navbar-brand {
+    font-size: 20px;
+  }
+}
+@media( max-width :440px){
+  .text .plans{
+    margin-top: 20px;
+}
+  .text a{
+    font-size: 0.9em;
+    padding: 8px 20px;
+  }
+  .navbar-brand{
+    font-size: 17px;
+    margin: 5px;
+  }
+  .text h2
+  {
+    font-size: 1.3em;
+    padding-bottom: 15px;
+  }
+  .navbar-toggler-icon{
+    width: 1.3rem;
+    height: 1.3rem;
+  }
+  .navbar-toggler{
+    padding: 0px;
+  }
+  
 }
