--- a/Booking/templates/about.html
+++ b/Booking/templates/about.html
@@ -12,12 +12,7 @@
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     />
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="static/bootstrap.css" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,49 +20,85 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@200&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="static/about.css" />
   </head>
   <body>
-    <div class="back"><a class="home" href="index.html">Home>></a></div>
-    <div class="container-fluid">
-      <div class="content-section">
-        <div class="content">
-          <h1>ABOUT US</h1>
-          <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis
-            consequuntur officia, ratione, doloribus aut aliquid numquam nulla
-            quia totam exercitationem illo a reprehenderit repellendus quis
-            assumenda eum cumque laudantium perspiciatis. Lorem ipsum dolor sit,
-            amet consectetur adipisicing elit. Blanditiis consequuntur officia,
-            ratione, doloribus aut aliquid
-          </p>
-          <div class="socials">
-            <a
-              class="footer-link"
-              href="https://www.linkedin.com/SS Travel Solutions"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-            <a
-              class="footer-link"
-              href="https://www.instagram.com/sstravelsolutions"
-              ><i class="fab fa-instagram-square"></i
-            ></a>
+    <section class="first_sec">
+      <div class="back"><a class="home" href="index.html">Home>></a></div>
+      <div class="container-fluid">
+        <div class="content-section">
+          <div class="content">
+            <h1>ABOUT US</h1>
+            <h3>SS Travel Solutions,</h3>
+            <p>
+              An emerging pioneer in the field of tourism catering through world
+              class customized & tailor-made packages for the customers. With
+              direct tie ups with major DMCs across the globe, world class
+              services and facilities we are trying to change the face of the
+              Indian travel industry. With our motto, “Every tour tells a
+              story”, we are helping our happy clients in creating & telling
+              their travel stories through us.
+            </p>
+            <div class="socials">
+              <a
+                class="footer-link"
+                href="https://www.linkedin.com/SS Travel Solutions"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a
+                class="footer-link"
+                href="https://www.instagram.com/sstravelsolutions"
+                ><i class="fab fa-instagram-square"></i
+              ></a>
 
-            <a
-              class="footer-link"
-              href="https://www.facebook.com/SS Travel Solutions"
-              ><i class="fab fa-facebook-square"></i
-            ></a>
-            <a class="footer-link" href="mailto:sstravelsolutions@gmail.com"
-              ><i class="fas fa-envelope"></i
-            ></a>
+              <a class="footer-link" href="mailto:sstravelsolutions@gmail.com"
+                ><i class="fas fa-envelope"></i
+              ></a>
+            </div>
           </div>
         </div>
+        <div class="image">
+          <img src="static/images/New Logo immage.png" alt="" />
+        </div>
       </div>
-      <div class="image">
-        <img src="images/New Logo immage.png" alt="" />
+    </section>
+
+    <section class="second_sec">
+      <div>
+        <h3 class="updates">Kindly Subscribe For Regular Updates</h3>
       </div>
-    </div>
+
+      <div class="input-form">
+        <form class="input" action="" method="post">
+          <div>
+            <input
+              class="input"
+              type="email"
+              name="email_id"
+              placeholder="Enter Your E-mail"
+              required
+            />
+          </div>
+
+          <div>
+            <input
+              class="input"
+              type="text"
+              name="con_number"
+              placeholder="Contact Number"
+              required
+            />
+          </div>
+
+          <div>
+            <input
+              type="submit"
+              value="SUBSCRIBE"
+              class="subs btn-sub text-white"
+            />
+          </div>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
