--- a/Booking/templates/contact.html
+++ b/Booking/templates/contact.html
@@ -12,18 +12,8 @@
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     />
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <!-- Bootstrap js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="static/bootstrap.css" />
+   
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,15 +23,17 @@
       rel="stylesheet"
     />
     <!-- external css -->
-    <link rel="stylesheet" href="Booking/static/contact.css" />
+    <link rel="stylesheet" href=" static/contact.css" />
   </head>
   <body>
     <div class="back"><a class="home" href="index.html">Home>></a></div>
+    <div class="overlay"></div>
     <section class="contact">
+
       <div class="content">
         <h1>Contact Us</h1>
-        <p class="phrase">Let's Have A Conversation,
-          We'd Love To Hear From You</p></p>
+        <p class="phrase">Let's Have A Conversation
+          </p></p>
       </div>
       <div class="container-fluid">
         <div class="contact-info">
@@ -78,10 +70,11 @@
             </div>
           </div>
         </div>
+       
         <div class="contact-form">
-          <form method="post">
-            {% csrf_token %}
-            <h2>Send Message</h2>
+          <form action="" method="post">
+              {% csrf_token %}
+            <h2>We'd Love To Hear From You</h2>
             <div class="inputBox">
               <span>Full Name</span>
               <div></div>
@@ -95,7 +88,7 @@
             <div class="inputBox">
               <span>Type your message....</span>
               <div></div>
-              <textarea required="required" rows="3" cols="30" name="desc"></textarea>
+              <textarea name="desc" required="required" rows="3" cols="30"></textarea>
             </div>
             <div></div>
             <div class="button">
@@ -115,7 +108,7 @@
         <div class="bottom-container">
           <a
             class="footer-link"
-            href="https://www.linkedin.com/SS Travel Solutions"
+            href="https://www.linkedin.com/company/ss-travel-solutions"
             ><i class="fab fa-linkedin"></i
           ></a>
           <a
@@ -124,11 +117,6 @@
             ><i class="fab fa-instagram-square"></i
           ></a>
 
-          <a
-            class="footer-link"
-            href="https://www.facebook.com/SS Travel Solutions"
-            ><i class="fab fa-facebook-square"></i
-          ></a>
           <a class="footer-link" href="mailto:sstravelsolutions@gmail.com"
             ><i class="fas fa-envelope"></i
           ></a>
