--- a/Booking/templates/customer.html
+++ b/Booking/templates/customer.html
@@ -10,12 +10,7 @@
      href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
    />
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="static/bootstrap.css" />
     <!-- Bootstrap js -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -23,7 +18,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="customer.css">
+    <link rel="stylesheet" href="static/customer.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
   <body>
@@ -36,8 +31,8 @@
         <div class="row">
           <div class="col">
             <div class="testimonial">
-              <img src="p1.png" alt="">
-              <div class="name">Full name</div>
+              <img src="static/images/undraw_profile_pic_ic5t.png" alt="">
+              <div class="name">Jay Bhanu</div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -46,34 +41,35 @@
                 <i class="fas fa-star"></i>
               </div>
 
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+              <p class="para">
+                These guys are amazing at what they do. They will provide the best value for your money with giving the most innovative itineraries. Would definitely recommend planning a trip with them again soon !!
               </p>
             </div>
           </div>
 
           <div class="col">
             <div class="testimonial">
-              <img src="p2.png" alt="">
-              <div class="name">Full name</div>
+              <img src="static/images/undraw_female_avatar_w3jk.png" alt="">
+              <div class="name">Rasika Apte</div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+
               </div>
 
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+              <p class="para">
+                Highly recommended this company. They were very helpful and accomodating for my last minute solo trip to Manali. I was offered many customized options catered to my needs. Will go with them when I return.
               </p>
             </div>
           </div>
 
           <div class="col">
             <div class="testimonial">
-              <img src="p3.png" alt="">
-              <div class="name">Full name</div>
+              <img src="static/images/undraw_male_avatar_323b.png" alt="">
+              <div class="name">Ravi Bhanushali</div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -82,8 +78,8 @@
                 <i class="far fa-star"></i>
               </div>
 
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+              <p class="para">
+                We had an amazing experience planning our international trip with them. We went to Singapore, and they helped us with everything we want with our Singapore trip. Their service is really awesome. If you are planning for your next trip, you should definitely contact them.
               </p>
             </div>
           </div>
@@ -95,7 +91,7 @@
           <div class="bottom-container">
             <a
               class="footer-link"
-              href="https://www.linkedin.com/SS Travel Solutions"
+              href="https://www.linkedin.com/company/ss-travel-solutions"
               ><i class="fab fa-linkedin"></i
             ></a>
             <a
@@ -104,11 +100,7 @@
               ><i class="fab fa-instagram-square"></i
             ></a>
   
-            <a
-              class="footer-link"
-              href="https://www.facebook.com/SS Travel Solutions"
-              ><i class="fab fa-facebook-square"></i
-            ></a>
+            
             <a class="footer-link" href="mailto:sstravelsolutions@gmail.com"
               ><i class="fas fa-envelope"></i
             ></a>
