modified:   Booking/__pycache__/admin.cpython-310.pyc 	modified:   Booking/__pycache__/models.cpython-310.pyc 	modified:   Booking/__pycache__/views.cpython-310.pyc 	modified:   Booking/admin.py 	new file:   Booking/migrations/0001_initial.py 	new file:   Booking/migrations/__init__.py 	new file:   Booking/migrations/__pycache__/0001_initial.cpython-310.pyc 	new file:   Booking/migrations/__pycache__/__init__.cpython-310.pyc 	modified:   Booking/models.py 	modified:   Booking/templates/book.html 	modified:   Booking/templates/plans.html 	modified:   Booking/views.py 	modified:   db.sqlite3

--- a/Booking/templates/book.html
+++ b/Booking/templates/book.html
@@ -1348,7 +1348,7 @@
                     type="email"
                     class="bg-light person"
                     placeholder="E-mail ID"
-                    name="phone_no"
+                    name="emailid"
                     required
                   />
                   <div></div>
