modified:   Booking/__pycache__/models.cpython-310.pyc 	modified:   Booking/__pycache__/views.cpython-310.pyc 	modified:   Booking/models.py 	modified:   Booking/templates/about.html 	modified:   Booking/views.py 	modified:   FLightBooking/__pycache__/settings.cpython-310.pyc 	modified:   FLightBooking/__pycache__/urls.cpython-310.pyc 	modified:   FLightBooking/settings.py 	modified:   FLightBooking/urls.py

--- a/Booking/templates/about.html
+++ b/Booking/templates/about.html
@@ -70,6 +70,7 @@
 
       <div class="input-form">
         <form class="input" action="" method="post">
+          {% csrf_token %}
           <div>
             <input
               class="input"
