--- a/Booking/static/plans.css
+++ b/Booking/static/plans.css
@@ -182,6 +182,7 @@ body {
   }
   .signup-content .text{
     padding: 0 0 0 10%;
+    margin-left: 0px;
   }
   .signup-content2 .text{
     margin-left: 50px;
@@ -213,18 +214,23 @@ body {
   .signup-content .dest{
     width: 200px;
   }
-
+  .signup-content .text{
+    padding: 0 0 0 5%;
+  }
+  .signup-content2 .text{
+    margin-left: 20px;
+  }
 
   .signup-content2 .tarikh {
     width: 237px;
-    margin-left: 30px;
+    margin-left: 20px;
   }
   .signup-content2 .submit-btn {
     width: 150px;
     margin-left: 130px;
   }
   .signup-content2 .travel {
-    margin: 20px 10px;
+    margin: 20px 25px;
   
   }
   .signup-content2 .person{
@@ -264,7 +270,7 @@ body {
     margin-left: 30px;
   }
   .signup-content .text {
-    margin-left: 10px;
+    margin-left: 15px;
   }
   .signup-content2 .text{
     margin-left: 30px;
@@ -272,7 +278,9 @@ body {
   .signup-content2 .travel , .signup-content2 .travel2 , #txtOther{
     margin-left: 30px;
   }
- 
+  .signup-content2 .tarikh{
+    margin-left: 30px;
+  }
   
 }
 /* socials */
@@ -296,4 +304,3 @@ p.copy {
   padding-top: 10px;
   padding-left: 15px;
 }
-
