modified:   Booking/templates/index.html

--- a/Booking/templates/index.html
+++ b/Booking/templates/index.html
@@ -63,7 +63,7 @@
           </nav>
 
           <video
-        src="static\images\Pexels Videos 3372.mp4"
+        src="Pexels Videos 3372.mp4"
         muted
         loop
         autoplay
