--- a/Booking/static/book.css
+++ b/Booking/static/book.css
@@ -180,6 +180,7 @@ body {
   }
   .signup-content2 .person{
     margin-left: 30px;
+    width: 150px;
   }
   .signup-content2 .submit-btn {
     margin-left: 50px;
