modified:   Booking/__pycache__/views.cpython-310.pyc 	modified:   Booking/static/about.css 	modified:   Booking/static/book.css 	deleted:    Booking/static/js/demo.js 	new file:   Booking/static/login.css 	modified:   Booking/static/plans.css 	new file:   Booking/static/sub.css 	deleted:    Booking/static/subs.css 	modified:   Booking/templates/about.html 	modified:   Booking/templates/book.html 	modified:   Booking/templates/contact.html 	modified:   Booking/templates/customer.html 	new file:   Booking/templates/images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg 	modified:   Booking/templates/index.html 	modified:   Booking/templates/plans.html 	new file:   Booking/templates/subs.html 	modified:   Booking/urls.py 	modified:   Booking/views.py 	modified:   FLightBooking/__pycache__/urls.cpython-310.pyc 	modified:   FLightBooking/urls.py

--- a/Booking/static/book.css
+++ b/Booking/static/book.css
@@ -78,6 +78,7 @@ body {
   margin: 10px;
   border-radius: 10px;
   border: 0;
+  
 }
 .signup-content2 .travel {
   margin: 20px 20px;
@@ -180,7 +181,7 @@ body {
   }
   .signup-content2 .person{
     margin-left: 30px;
-    width: 150px;
+    width: 70%;
   }
   .signup-content2 .submit-btn {
     margin-left: 50px;
