--- a/Booking/templates/about.html
+++ b/Booking/templates/about.html
@@ -23,83 +23,42 @@
     <link rel="stylesheet" href="static/about.css" />
   </head>
   <body>
-    <section class="first_sec">
-      <div class="back"><a class="home" href="index.html">Home>></a></div>
-      <div class="container-fluid">
-        <div class="content-section">
-          <div class="content">
-            <h1>ABOUT US</h1>
-            <h3>SS Travel Solutions,</h3>
-            <p>
-              An emerging pioneer in the field of tourism catering through world
-              class customized & tailor-made packages for the customers. With
-              direct tie ups with major DMCs across the globe, world class
-              services and facilities we are trying to change the face of the
-              Indian travel industry. With our motto, “Every tour tells a
-              story”, we are helping our happy clients in creating & telling
-              their travel stories through us.
-            </p>
-            <div class="socials">
-              <a
-                class="footer-link"
-                href="https://www.linkedin.com/SS Travel Solutions"
-                ><i class="fab fa-linkedin"></i
-              ></a>
-              <a
-                class="footer-link"
-                href="https://www.instagram.com/sstravelsolutions"
-                ><i class="fab fa-instagram-square"></i
-              ></a>
+    <div class="back"><a class="home" href="index.html">Home>></a></div>
+    <div class="container-fluid">
+      <div class="content-section">
+        <div class="content">
+          <h1>ABOUT US</h1>
+          <h3>SS Travel Solutions,</h3>
+          <p>
+            An emerging pioneer in the field of tourism catering through world
+            class customized & tailor-made packages for the customers. With
+            direct tie ups with major DMCs across the globe, world class
+            services and facilities we are trying to change the face of the
+            Indian travel industry. With our motto, “Every tour tells a story”,
+            we are helping our happy clients in creating & telling their travel
+            stories through us.
+          </p>
+          <div class="socials">
+            <a
+              class="footer-link"
+              href="https://www.linkedin.com/SS Travel Solutions"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a
+              class="footer-link"
+              href="https://www.instagram.com/sstravelsolutions"
+              ><i class="fab fa-instagram-square"></i
+            ></a>
 
-              <a class="footer-link" href="mailto:sstravelsolutions@gmail.com"
-                ><i class="fas fa-envelope"></i
-              ></a>
-            </div>
+            <a class="footer-link" href="mailto:sstravelsolutions@gmail.com"
+              ><i class="fas fa-envelope"></i
+            ></a>
           </div>
         </div>
-        <div class="image">
-          <img src="static/images/New Logo immage.png" alt="" />
-        </div>
       </div>
-    </section>
-
-    <section class="second_sec">
-      <div>
-        <h3 class="updates">Kindly Subscribe For Regular Updates</h3>
+      <div class="image">
+        <img src="static/images/New Logo immage.png" alt="" />
       </div>
-
-      <div class="input-form">
-        <form class="input" action="" method="post">
-          {% csrf_token %}
-          <div>
-            <input
-              class="input"
-              type="email"
-              name="email_id"
-              placeholder="Enter Your E-mail"
-              required
-            />
-          </div>
-
-          <div>
-            <input
-              class="input"
-              type="text"
-              name="con_number"
-              placeholder="Contact Number"
-              required
-            />
-          </div>
-
-          <div>
-            <input
-              type="submit"
-              value="SUBSCRIBE"
-              class="subs btn-sub text-white"
-            />
-          </div>
-        </form>
-      </div>
-    </section>
+    </div>
   </body>
 </html>
