--- a/Booking/templates/book.html
+++ b/Booking/templates/book.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reservation</title>
+    <title>Document</title>
     <!-- font awesome link -->
 
     <link
@@ -1348,11 +1348,11 @@
                     type="email"
                     class="bg-light person"
                     placeholder="E-mail ID"
-                    name="emailid"
+                    name="phone_no"
                     required
                   />
                   <div></div>
-                  <input type="submit" value="SUBMIT" class="submit-btn btn" />
+                  <a href="subs.html"><input type="submit" value="SUBMIT" class="submit-btn btn"  /></a>
                 </div>
               </div>
             </form>
