--- a/Booking/templates/contact.html
+++ b/Booking/templates/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reach Us</title>
+    <title>Document</title>
     <!-- font awesome link -->
 
     <link
@@ -92,12 +92,12 @@
             </div>
             <div></div>
             <div class="button">
-              <input
+              <a href="subs.html"><input
                 class="btn text-white"
                 type="submit"
                 name=""
                 value="send"
-              />
+              /></a>
             </div>
           </form>
         </div>
