--- a/Booking/static/plans.css
+++ b/Booking/static/plans.css
@@ -147,7 +147,7 @@ body {
 .GET{
   display: inline-block;
   font-size: 1.8em;
- padding: 10px 30px; 
+  padding: 10px 30px; 
   text-transform: uppercase;
   text-decoration: none;
   font-weight: 500;
@@ -205,7 +205,9 @@ body {
     width: 400px;
     border-radius: 9px;
   }
-  
+  .content{
+    margin-left: 60px;
+  }
   .signup-content2 .input {
     width: 320px;
     padding: 10px;
@@ -243,10 +245,10 @@ body {
   #txtOther{
     margin-left: 125px;
   }
-  .GET{
+  /* .GET{
     
     padding: 10px 40px 10px 20px;
-  }
+  } */
 }
 @media(max-width:480px){
   #form{
@@ -258,7 +260,7 @@ body {
   }
   .GET{
     font-size:1.3rem ;
-    padding: 10px 30px 10px 10px;
+    
   }
   .signup-content2 .person{
     margin-left: 30px;
@@ -304,3 +306,4 @@ p.copy {
   padding-top: 10px;
   padding-left: 15px;
 }
+
