--- a/Booking/templates/customer.html
+++ b/Booking/templates/customer.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Reviews</title>
+    <title></title>
      <!-- font awesome link -->
 
      <link
