--- a/Booking/templates/index.html
+++ b/Booking/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SS Travel Solutions</title>
+    <title>Document</title>
      <!-- font awesome link -->
 
      <link
@@ -63,7 +63,7 @@
           </nav>
 
           <video
-        src="static/images/Pexels Videos 3372.mp4"
+        src="static\images\Pexels Videos 3372.mp4"
         muted
         loop
         autoplay
