--- a/Booking/templates/plans.html
+++ b/Booking/templates/plans.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plan your Trip</title>
+    <title>Document</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="static/bootstrap.css" />
     <link rel="stylesheet" href="static/plans.css" />
@@ -20,46 +20,44 @@
           </p>
           <div id="booking-form">
             <form id="form" action="" method="post">
-             {% csrf_token %}
               <div class="signup-form">
                 <div class="Signup-head bg-dark text-white">
                   <h1>WHERE TO?</h1>
                 </div>
                 <div class="signup-content">
                   <label class="text" for="">Destination</label>
-                  <input class="dest" type="text=" name="dest" />
+                  <input class="dest" type="text=" required />
                 </div>
 
                 <div class="signup-content2">
                   <label class="text">Trip start date :</label>
-                  <input type="date" class="tarikh bg-light" name="strdate"/>
+                  <input type="date" class="tarikh bg-light" required />
                   <label class="text"> Trip end date :</label>
-                  <input type="date" class="tarikh bg-light" name="enddate" />
+                  <input type="date" class="tarikh bg-light" required />
                   <div></div>
 
                   <input
                     type="number"
                     class="bg-light person"
                     placeholder="Adults"
-                    name="adults1"
+                    required
                   />
                   <input
                     type="number"
                     class="bg-light person"
                     placeholder="Children"
-                    name="children1"
                   />
                   <input
                     type="text"
                     class="bg-light person"
                     placeholder="Full Name"
-                    name="f_name"
+                    required
                   />
                   <input
                     type="text"
                     class="bg-light person"
                     placeholder="Phone Number"
-                    name="ph_num"
+                    required
                   />
 
                   <label class="travel">Hotel category</label>
@@ -67,7 +65,7 @@
                     id="category"
                     onchange="EnableDisableTextBox(this)"
                     class="bg-light travel2"
-                    name="hot_cat"
+                    required
                   >
                     <option></option>
                     <option value="1">3 Star</option>
@@ -82,11 +80,11 @@
                     class="travel"
                     id="txtOther"
                     disabled="disabled"
-                    name="hot_cat"
+                    required
                   />
 
                   <label class="travel">Land Transfers</label>
-                  <select class="bg-light travel2" name="lnd_trns">
+                  <select class="bg-light travel2" required>
                     <option></option>
                     <option>Sedan</option>
                     <option>SUV</option>
@@ -94,7 +92,7 @@
                     <option>Bus</option>
                   </select>
                   <label class="travel">Transportation</label>
-                  <select class="bg-light travel2" name="transport">
+                  <select class="bg-light travel2" required>
                     <option></option>
                     <option>Air</option>
                     <option>Rail</option>
@@ -102,14 +100,16 @@
                   </select>
 
                   <div></div>
-                  <input type="submit" value="SUBMIT" class="submit-btn btn" />
+                  <a href="subs.html"
+                    ><input type="submit" value="SUBMIT" class="submit-btn btn"
+                  /></a>
                 </div>
               </div>
             </form>
           </div>
         </div>
       </div>
-      <a class="GET" href="contact.html">Get In Touch With Us</a>
+      <div><a class="GET" href="contact.html">Get In Touch With Us</a></div>
     </section>
     <section id="socials">
       <div class="container-fluid">
