modified:   Booking/templates/plans.html

--- a/Booking/templates/plans.html
+++ b/Booking/templates/plans.html
@@ -20,6 +20,7 @@
           </p>
           <div id="booking-form">
             <form id="form" action="" method="post">
+              {% csrf_token %}
               <div class="signup-form">
                 <div class="Signup-head bg-dark text-white">
                   <h1>WHERE TO?</h1>
