--- a/Booking/templates/plans.html
+++ b/Booking/templates/plans.html
@@ -71,6 +71,7 @@
                     onchange="EnableDisableTextBox(this)"
                     class="bg-light travel2"
                     required
+                    name="hot_cat"
                   >
                     <option></option>
                     <option value="1">3 Star</option>
