--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -53,7 +53,7 @@ body{
     font-size: 20px;
     padding: 6px 10px 6px 10px;
     text-decoration: none;
-    margin-left: 35px;
+    margin-left: 15px;
     margin-top: 20px;
   }
   
