modified:   Booking/static/sub.css 	modified:   Booking/static/sub.css 	modified:   Booking/templates/subs.html

--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -1,11 +1,15 @@
 body{
   margin: 0;
   background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
-  background-size: cover;
+  /* background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
 }
 .home {
     text-decoration: none;
