--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -10,6 +10,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   min-height: 100vh;
+  background-attachment: fixed;
 }
 .home {
     text-decoration: none;
