--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -1,16 +1,16 @@
 body{
   margin: 0;
-  background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
+  /* background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
   /* background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   justify-content: center;
   align-items: center; */
   
-  background-position: center;
+  /* background-position: center; */
   /* background-repeat: no-repeat;
   min-height: 100vh;
-  background-attachment: fixed; */
+  background-attachment: fixed; */ 
 }
 .home {
     text-decoration: none;
@@ -32,6 +32,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
   }
   .heading{
     font-size: 30px;
