--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -1,11 +1,11 @@
 body{
   margin: 0;
-  /* background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
-  /* background-size: cover;
+  background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
   
   /* background-position: center; */
   /* background-repeat: no-repeat;
@@ -32,7 +32,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('images/alyssa-hurley-yekIZ4ltv1o-unsplash.jpg');
+    
   }
   .heading{
     font-size: 30px;
@@ -87,8 +87,9 @@ body{
   }
 
   @media (max-width:465px){
-    body{
-      max-height: 2000px;
+    
+    .btn-sub{
+      margin-left: 20%;
     }
     .heading{
       font-size: 25px;
