modified:   Booking/static/sub.css 	modified:   Booking/templates/subs.html 	modified:   staticfiles/sub.css 	new file:   staticfiles/sub.f8b3a7195395.css

--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -4,13 +4,9 @@ body{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: bottom fixed;
   justify-content: center;
   align-items: center;
-  
-  /* background-position: center; */
-  /* background-repeat: no-repeat;
-  min-height: 100vh;
-  background-attachment: fixed; */ 
 }
 .home {
     text-decoration: none;
@@ -32,17 +28,17 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
   }
   .heading{
     font-size: 30px;
-    padding: 100px 50px 30px;
+    margin: 0;
   }
   .main{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    padding: 100px 50px 50px 50px;
   }
   .updates{
     font-size: 20px;
@@ -87,10 +83,6 @@ body{
   }
 
   @media (max-width:465px){
-    
-    .btn-sub{
-      margin-left: 20%;
-    }
     .heading{
       font-size: 25px;
     }
