--- a/Booking/templates/subs.html
+++ b/Booking/templates/subs.html
@@ -14,7 +14,8 @@
     <div class="back"><a class="home" href="index.html">Home>></a></div>
     <div class="container-fluid">
       <div>
-        <h2 class="heading">Thank You !</h2>
+        <h2 class="heading">Thank You </h2>
+        <h2 class="heading">For Choosing Us !</h2>
       </div>
 
       <div>
