modified:   Booking/static/sub.css 	modified:   staticfiles/staticfiles.json 	new file:   staticfiles/sub.ce09b801807b.css 	new file:   staticfiles/sub.ce09b801807b.css.gz 	modified:   staticfiles/sub.css 	modified:   staticfiles/sub.css.gz

--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -38,13 +38,15 @@ html{
     
   }
   .heading{
+    margin: 0%;
     font-size: 30px;
-    padding: 100px 50px 30px;
+    /* padding: 100px 50px 30px; */
   }
   .main{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 100px 50px 50px 50px;
     
   }
   .updates{
