modified:   Booking/templates/subs.html

--- a/Booking/templates/subs.html
+++ b/Booking/templates/subs.html
@@ -13,7 +13,7 @@
   <body>
     <div class="back"><a class="home" href="index.html">Home>></a></div>
     <div class="container-fluid">
-      <div>
+      <div class="main">
         <h2 class="heading">Thank You </h2>
         <h2 class="heading">For Choosing Us !</h2>
       </div>
