modified:   Booking/static/sub.css 	modified:   staticfiles/staticfiles.json 	modified:   staticfiles/sub.css 	modified:   staticfiles/sub.css.gz 	new file:   staticfiles/sub.d3de635cb6ae.css 	new file:   staticfiles/sub.d3de635cb6ae.css.gz 	new file:   staticfiles/sub.f2159b9515c6.css 	new file:   staticfiles/sub.f2159b9515c6.css.gz

--- a/Booking/static/sub.css
+++ b/Booking/static/sub.css
@@ -47,6 +47,7 @@ html{
     justify-content: center;
     align-items: center;
     padding: 100px 50px 50px 50px;
+    flex-direction: column;
     
   }
   .updates{
@@ -94,12 +95,12 @@ html{
   @media (max-width:465px){
     
     .btn-sub{
-      margin-left: 20%;
+      margin-left: 22%;
     }
     .heading{
       font-size: 25px;
     }
     .updates{
-      font-size: 15px;
+      font-size: 18px;
     }
   }
